tests/sumo/errors/too_many_teleports/errors.sumo
Warning: Teleporting vehicle 'always_right.1'; waited too long (blocked), lane='4o_0', time=507.00.
Warning: Vehicle 'always_right.1' skips stop on lane '4o_0' time=507.00.
Warning: Vehicle 'always_right.1' ends teleporting on edge '4fi', time=507.00.
Warning: Teleporting vehicle 'always_right.2'; waited too long (blocked), lane='4o_0', time=812.00.
Warning: Vehicle 'always_right.2' skips stop on lane '4o_0' time=812.00.
Warning: Vehicle 'always_right.2' ends teleporting on edge '4fi', time=812.00.
Warning: Teleporting vehicle 'always_right.3'; waited too long (blocked), lane='4o_0', time=1117.00.
Warning: Vehicle 'always_right.3' skips stop on lane '4o_0' time=1117.00.
Warning: Vehicle 'always_right.3' ends teleporting on edge '4fi', time=1117.00.
Warning: Teleporting vehicle 'always_right.5'; waited too long (blocked), lane='4o_0', time=1504.00.
Warning: Vehicle 'always_right.5' skips stop on lane '4o_0' time=1504.00.
Warning: Vehicle 'always_right.5' ends teleporting on edge '4fi', time=1504.00.
Warning: Teleporting vehicle 'always_right.6'; waited too long (blocked), lane='4o_0', time=1809.00.
Warning: Vehicle 'always_right.6' skips stop on lane '4o_0' time=1809.00.
Warning: Vehicle 'always_right.6' ends teleporting on edge '4fi', time=1809.00.
Warning: Teleporting vehicle 'always_right.105'; waited too long (yield), lane='1si_2', time=1908.00.
